--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,10 @@ build: false
 
 test_script:
   - ps: |
+      Install-Module Jojoba -Force -AllowClobber
+      Install-Module Performance -Force -AllowClobber
+      Install-Module SqlServer -Force -AllowClobber
+      Install-Module Pester -Force -AllowClobber
       Install-Module PSScriptAnalyzer -Force -AllowClobber
 
       $env:PSModulePath = "$((Get-Item .).FullName)\;$($env:PSModulePath)"
