--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,9 +2,14 @@ build: false
 
 test_script:
   - ps: |
+      Install-Module Disposable -Force -AllowClobber
+      Install-Module Error -Force -AllowClobber
+      Install-Module PoshRSJob -Force -AllowClobber
+
       Install-Module Jojoba -Force -AllowClobber
       Install-Module Performance -Force -AllowClobber
       Install-Module SqlServer -Force -AllowClobber
+
       Install-Module Pester -Force -AllowClobber
       Install-Module PSScriptAnalyzer -Force -AllowClobber
 
